Add new function getDataUsers and fix
He añadido una función donde se puede obtener todos los datos del usuario y para validar el usuario debe de estar activo.

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ label {
 }
 
 /* Estilo para los campos de entrada */
-input[type="email"],
+input[type="text"],
 input[type="password"] {
     padding: 10px;
     margin-bottom: 15px;
