--- a/css/index.css
+++ b/css/index.css
@@ -107,9 +107,9 @@ button:hover {
 }
 
 #registerSuccess {
+    margin-top: 10px;
     display: flex;
     color: green;
-    margin-top: 0.2em;
     justify-content: center;
     align-items: center;
     align-content: center;
