--- a/css/createctf.css
+++ b/css/createctf.css
@@ -18,17 +18,23 @@
 
 #contain {
     padding: 3em;
+    margin: 0 1em;
 
     max-width: 30em;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     
     border-radius: 1em;
-    background-color: red;
+    background-color: #009dff;
+
     border: solid 2px white;
+}
+
+#contain > h1 {
+    font-size: 2.5em;
+    font-weight: bold;
 }
 
 form {
@@ -50,8 +56,15 @@ form {
 
 textarea {
     resize: none;
+    margin-bottom: 0.5em
 }
 
 button {
     margin-top: 1em;
+}
+
+.error {
+    margin-top: 0.5em;
+    color: red;
+    font-weight: 600;
 }
