--- a/css/home.css
+++ b/css/home.css
@@ -7,10 +7,18 @@
 }
 
 body {
-    background-image: url('../img/backGround\ \(2\).jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #001532;
     color: aliceblue;
+}
+
+#cnv {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
 }
 
 #mainContain {
@@ -20,14 +28,20 @@ body {
     /* height: 100vh; */
 }
 
-#mainContain > h2 {
-    font-size: 2.5em;
+#mainContain > h1 {
+    font-size: 3em;
     margin: 1em 0;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-#mainContain > p {
-    width: 30em;
+.logo {
+    height: 2em;
+    width: 2em;
+    border-radius: 10em;
+    margin-bottom: 0.5em;
 }
 
 
@@ -45,11 +59,33 @@ body {
 
 }
 
+#panelScore > h3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .rowScore{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+}
+
+.numberScore{
+    font-weight: 700;
+}
+
+#goldCrown{
+    color: goldenrod;
+}
+
+#silverCrown{
+    color: silver;
+}
+
+#copperCrown{
+    color: brown;
 }
 
 .bannerCTF {
@@ -62,37 +98,59 @@ body {
 
 .puntuacion {
     font-size: 1.5em;
-    color: blueviolet;
+    font-weight: 600;
+    color: rgb(43, 255, 0);
 }
 
 .boxCTF {
     padding: 1em;
-    margin: 2em 0;
     width: 25em;
+    margin-bottom: 2em;
 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     
-    background-color: rgb(192, 178, 255);
-    border-radius: 1.5em;
+    border-radius: 0.2em;
+    /* border: rgb(0, 179, 255) 2px solid; */
+    box-shadow: 1px 1px 15px rgba(0, 116, 205, 0.984);
+    background-color: rgb(59, 126, 154);
 }
 
 .buttonFlag {
-    margin: 1em 0;
+    margin: 1.5em 0;
     padding: 1em;
     width: 50em;
 
-    border-radius: 1em;
-    border: aliceblue 1px solid;
-    background-color: cadetblue;
+    border-radius: 0.2em;
+    /* border: rgb(0, 179, 255) 2px solid; */
+    box-shadow: 1px 1px 15px rgba(0, 116, 205, 0.984);
+    background-color: rgb(59, 126, 154);
+}
+
+.buttonFlag:hover{
+    transform: scale(1.02,1.02);
+    transition: 0.5s;
 }
 
 .btn {
+    color: aliceblue;
     width: 100%;
 }
 
+.answerUser{
+    margin: 0 0 1em 0;
+    padding: 0.4em;
+    width: 100%;
+}
+
+.fechBox{
+    font-size: 0.7em;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
 
 #botonUser {
     
@@ -119,6 +177,16 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+
+    #cnv {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: -1;
+    }
 
     #mainContain > h2 {
         font-size: 2.5em;
@@ -166,6 +234,9 @@ body {
 
     #botonUser {
         width: 100%;
+        position: fixed;
+        background-color: #001532;
+        bottom: 0;
     }
 
     .boxCTF{
