--- a/css/index.css
+++ b/css/index.css
@@ -7,27 +7,33 @@
 
 /* Estilo para el cuerpo de la página */
 body {
+    /* height: 100%; */
     font-family: Arial, sans-serif;
-    background-image: url('../img/backGround\ \(2\).jpg');
-    background-size: cover; /* Cubrir todo el área */
-    background-position: center; /* Centrar la imagen */
+    background-color: #001532;
     display: flex;
-    background-size: cover; /* Cubrir todo el área */
-    background-position: center; /* Centrar la imagen */
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+#cnv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
 /* Estilo para el contenedor principal */
 main {
     max-width: 400px;
     width: 100%; /* Ajustar el ancho al 100% para ocupar todo el ancho disponible */
-    background-color: #fff;
+    background-color: rgb(0, 0, 0, 0.4);
     padding: 50px; /* Ajustar el padding según sea necesario */
     margin: 100px;
     border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 187, 255, 0.984);
 }
 
 /* Estilo para el enlace */
@@ -35,7 +41,7 @@ main a {
     display: block;
     text-align: center;
     margin-top: 20px;
-    color: #333;
+    color: aliceblue;
     text-decoration: none;
     margin-bottom: 1.5em;
 }
@@ -49,7 +55,7 @@ main a:hover {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
+    color: white;
 }
 
 /* Estilo para el formulario */
@@ -74,7 +80,7 @@ form {
 /* Estilo para las etiquetas de los campos de entrada */
 label {
     margin-bottom: 5px;
-    color: #333;
+    color: white;
 }
 
 /* Estilo para los campos de entrada */
@@ -82,7 +88,7 @@ input[type="text"],
 input[type="password"] {
     padding: 14px 20px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #737373;
     border-radius: 3px;
 }
 
