--- a/css/home.css
+++ b/css/home.css
@@ -44,6 +44,28 @@ body {
     margin-bottom: 0.5em;
 }
 
+#navBar {
+    height: 3em;
+    background-color: #00ffe518;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#navBar > ul{
+    margin-top: 1rem; /*! Adaptación de margin bottom del bootstrap */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#navBar ul li{
+    margin: 0 1em;
+}
+
+a {
+    list-style: none !important;
+}
 
 #panelScore {
 
@@ -153,28 +175,10 @@ body {
 }
 
 #botonUser {
-    
-    padding: 0.5em;
-    width: 8em;
-    font-size: 1.5em;
-    
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-    
-    background: rgba(0, 0, 0, 0.1);
-    /* border-radius: 2em; */
+   display: none;
 }
 
-#botonUser > a > i {
-    color: #007bff;
-}
 
-#botonUser > a > i:hover {
-    transform: scale(1.3,1.3);
-    transition: 1s;
-}
 
 @media screen and (max-width: 600px) {
 
@@ -206,9 +210,17 @@ body {
         width: 15em;
     }
 
+    #navBar > ul {
+        display: none;
+    }
+
     #panelScore {
         margin: 1em 0 0 0 ;
         width: 15em;
+    }
+
+    #retosctf {
+        margin-bottom: 4em ;
     }
 
     .rowScore{
@@ -225,7 +237,8 @@ body {
 
         border-radius: 1em;
         border: aliceblue 1px solid;
-        background-color: cadetblue;
+        background-color: rgb(59, 126, 154);
+
     }
 
     .bannerCTF > h2 {
@@ -233,10 +246,28 @@ body {
     }
 
     #botonUser {
+        padding: 0.5em;
+        font-size: 1.5em;
+        
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        align-items: center;
+        
+        background: rgba(0, 0, 0, 0.1);
         width: 100%;
         position: fixed;
         background-color: #001532;
         bottom: 0;
+    }
+
+    #botonUser > a > i {   
+        color: #007bff;
+    }
+    
+    #botonUser > a > i:hover {
+        transform: scale(1.3,1.3);
+        transition: 1s;
     }
 
     .boxCTF{
