--- a/css/register.css
+++ b/css/register.css
@@ -1,12 +1,19 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('../img/backGround\ \(2\).jpg');
-    background-size: cover; 
-    background-position: center; 
+    background-color: #001532;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+#cnv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 .container {
@@ -14,7 +21,8 @@ body {
     background-color: #ffffff;
     padding: 40px;
     border-radius: 15px;
-    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 187, 255, 0.984);
+    background-color: rgb(0, 0, 0, 0.4);
 }
 
 #logo {
@@ -31,6 +39,7 @@ body {
 
 form {
     width: 100%;
+
 }
 
 input[type="text"],
@@ -46,7 +55,7 @@ input[type="password"] {
 
 input[type="submit"] {
     width: 100%;
-    background-color: #000000;
+    background-color: blue;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -66,3 +75,19 @@ input[type="submit"]:hover {
     text-align: center;
 }
 
+@media screen and (max-width: 480px){
+
+    #logo img {
+        width: 5em;
+        height: auto;
+        border-radius: 5em;
+    }
+
+    .container {
+        width: 15em;
+        background-color: #ffffff;
+        padding: 40px;
+        border-radius: 15px;
+        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+    }
+}
