--- a/css/resetPasswordSend.css
+++ b/css/resetPasswordSend.css
@@ -6,9 +6,17 @@
 }
 
 body{
-    background: url("../img/backGround\ \(2\).jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #001532;
+    
+}
+
+#cnv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
 #mainContent{
@@ -23,12 +31,14 @@ body{
 }
 
 #panelReset{
-    background-color: ghostwhite;
-    
+    background-color: rgb(0, 0, 0, 0.4);
+    color: aliceblue;
     height: 12em;
     width: 30em;
-    border: solid 3px black;
+    border: solid 1px black;
     border-radius: 1em;
+    box-shadow: 0 0 10px rgba(0, 187, 255, 0.984);
+
 }
 
 form {
@@ -61,8 +71,8 @@ h2{
 
 button{
     margin-top: 1em;
-    padding: 0.5em;
+    padding: 0.5em 1em;
     border-radius: 5px;
-    background: linear-gradient(45deg, cyan, rgb(145, 6, 251));
+    background: blue;
     color: aliceblue;
 }
