--- a/css/createctf.css
+++ b/css/createctf.css
@@ -4,16 +4,26 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #001532;
+    color: aliceblue;
+}
+
 #mainContain {
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
 
-    background: url(../img/backGround\ \(2\).jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+#cnv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
 #contain {
@@ -27,9 +37,10 @@
     justify-content: center;
     
     border-radius: 1em;
-    background-color: #009dff;
+    background-color: rgb(0, 0, 0, 0.4);
+    box-shadow: 0 0 10px rgba(0, 187, 255, 0.984);
 
-    border: solid 2px white;
+    border: solid 1px white;
 }
 
 #contain > h1 {
