--- a/css/home.css
+++ b/css/home.css
@@ -46,7 +46,7 @@ body {
 
 #navBar {
     height: 3em;
-    background-color: #00ffe518;
+    background-color: #00ffe548;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -143,7 +143,7 @@ a {
 
 .boxCTF {
     padding: 1em;
-    width: 25em;
+    width: 50em;
     margin-bottom: 2em;
 
     display: flex;
@@ -155,6 +155,10 @@ a {
     /* border: rgb(0, 179, 255) 2px solid; */
     box-shadow: 1px 1px 15px rgba(0, 116, 205, 0.984);
     background-color: rgb(59, 126, 154);
+}
+
+.boxCTF > form {
+    width: 100%;
 }
 
 .buttonFlag {
@@ -176,6 +180,10 @@ a {
 .btn {
     color: aliceblue;
     width: 100%;
+
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
 }
 
 .answerUser{
@@ -288,6 +296,7 @@ a {
     }
 
     .boxCTF{
+        margin-top: 2em;
         width: 20em;
     }
 }
