--- a/css/home.css
+++ b/css/home.css
@@ -189,6 +189,13 @@ a {
     align-items: flex-start;
 }
 
+.descripcionBoton{
+    width: 100%;
+    overflow-wrap: break-word; 
+    word-wrap: break-word; 
+    word-break: break-all;
+}
+
 .btn-primary{
     display: flex;
     flex-flow: column wrap;
