--- a/css/createctf.css
+++ b/css/createctf.css
@@ -9,6 +9,33 @@ body {
     color: aliceblue;
 }
 
+#navBar {
+    margin-bottom: 2em;
+    height: 3em;
+    background-color: #00ffe548;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#navBar > ul{
+    margin-top: 1rem; /*! Adaptación de margin bottom del bootstrap */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
+}
+
+#navBar ul li{
+    margin: 0 1em;
+}
+
+a {
+    color: aliceblue;
+    list-style: none !important;
+    text-decoration: none;
+}
+
 #mainContain {
     height: 100vh;
     display: flex;
@@ -62,6 +89,7 @@ form {
 .inputForm > input {
     margin-left: 0.5em;
     width: 100%;
+    background-color: rgb(234, 234, 234);
 }
 
 
